<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- item_package.xml (en la carpeta res/layout) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Mostrar los atributos del paquete -->
        <TextView
            android:id="@+id/textViewPackageName"
            style="@style/HalfWidthTextView"
            android:text="@string/package_name_text_label" />

        <TextView
            android:id="@+id/textViewTransport"
            style="@style/HalfWidthTextView"
            android:text="@string/transport_text_label" />

        <TextView
            android:id="@+id/textViewDuration"
            style="@style/HalfWidthTextView"
            android:text="@string/duration_text_label" />

        <!--Start-->

        <TextView
            android:id="@+id/textViewPrice"
            style="@style/HalfWidthTextView"
            android:text="@string/price_text_label" />

        <!-- Botón "Buy" -->

        <ImageView
            android:id="@+id/imageViewPackage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            tools:srcCompat="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="#FFEB3B"
            android:stepSize="1"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDuration" />

        <Button
            android:id="@+id/buttonBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_button_label"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>