<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- importantForAccessibility= Habilitamos que se muestre la infomacion para personas con discapasidad
        hint = Da informacion al ususario con discapacidad-->

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass_text_label"
        android:importantForAccessibility="yes"
        android:autofillHints="@string/pass_text_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextName" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="261dp"
        android:layout_height="71dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_text_label"
        android:autofillHints="@string/name_text_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/start_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/buttonSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/sing_up_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.088" />
</androidx.constraintlayout.widget.ConstraintLayout>